Implemented unzipper method